* added account balance snapshot * added pay endpoint * refactoring
